Fix tooltip on transit map, make walkability tooltip stay visible

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -150,7 +150,7 @@ p {
 
 /* Popup content */
 .mapboxgl-popup-content {
-	background: #000;
+	background: #000 !important;
 	color: white;
 	border-radius: 0.5em;
 	padding: 1em !important;
